[project]
name = "fa-proxy"
version = "0.1.0"
description = "An HTTP authentication wrapper around Font Awesome Pro's private Python package index"
readme = "README.md"
authors = [
	{ name = "celsius narhwal", email = "hello@celsiusnarhwal.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
]
